--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -8,6 +8,9 @@ defaults:
   - model: hf.yaml
   - paths: default.yaml
   - trainer: default.yaml
+  - logger: many_loggers.yaml
+  - callbacks: default.yaml
+  - hydra: default.yaml
 
   # experiment configs allow for version control of specific hyperparameters
   # e.g. best hyperparameters for given model and datamodule
@@ -21,7 +24,7 @@ train: True
 
 # evaluate on test set, using best model weights achieved during training
 # lightning chooses best weights based on the metric specified in checkpoint callback
-test: False
+test: True
 
 # compile model for faster training with pytorch 2.0
 compile: False
