--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,11 @@ dvc-gdrive
 hydra-core==1.3.2
 hydra-colorlog==1.2.0
 hydra-optuna-sweeper==1.2.0
+hydra-joblib-launcher==1.2.0
+
+# --------- loggers --------- #
+mlflow
+aim>=3.16.2  # no lower than 3.16.2, see https://github.com/aimhubio/aim/issues/2550
 
 # --------- others --------- #
 pyrootutils     # standardizing the project root setup
